# metahack

./: README.md  baseline_scores.txt  baseline_scores_live.txt  inference.py  output.txt  pyproject.toml  run1.txt  run2.txt  test_graders.py  validate-submission.sh
IndiaServiceEnv/: DESIGN.md  Dockerfile  README.md  baseline_scores_live.txt  inference.py  openenv.yaml  pyproject.toml  test_graders.py
IndiaServiceEnv/app/: env.py  graders.py  main.py  models.py  tasks.py
IndiaServiceEnv/app/data/: policies.json  tickets.json
IndiaServiceEnv/server/: app.py
app/: graders.py  main.py
indiaserviceenv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_shell_commands.py
