[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indiaserviceenv"
version = "1.0.0"
description = "India Service Environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
    "pyyaml",
    "python-dotenv"
]
